добавил стили для боди страницы catalog

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ body{
     background-position: top center;
     background-repeat: no-repeat;
 }
+.inner-page{
+    color: #000000;
+
+    background-color: #f9f6f3;
+    background-image: url("../img/Layer_10_copy.png");
+    background-position: 0 0;
+    background-repeat: repeat;
+}
 a{
     text-decoration: none;
 }
