--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,19 @@ a{
 .restore:focus{
     text-decoration: none;
 }
+
+/* стили для catalog.html <---------------------------------------*/
+
+.page-title{
+    font-size: 30px;
+    line-height: 42px;
+}
+.breadcrumbs{
+    list-style: none;
+}
+.breadcrumbs a{
+    color: #000000;
+}
+.breabcrumbs-current a{
+    color: #aba9a7;
+}
