--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,37 @@ a{
 .button:active{
     background-color: #663d15;
 }
+.main-header{
+    margin-bottom:75px;
+}
 .main-nav{
-    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
+}
+.main-header-logo{
+    order: 1; 
+}
+.main-nav-wrap{
+    background-color: #000000;
+
+    width: 100%;
+
+    margin-bottom: 60px;
+}
+.container{
+    width: 940px;
+
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.main-nav-wrap .container{
+    display: flex;
+    justify-content: space-between;
 }
 .site-nav,
 .user-nav{
@@ -62,23 +87,43 @@ a{
 .user-nav a:focus{
     background-color: #242424;
 }
+.features{
+    margin-bottom: 80px;
+}
 .feature-list{
+    display: flex;
+    justify-content: space-between;
+    padding:0;
+    margin: 0;
     list-style: none;
 }
 .feature-items{
     text-align: center;
+    width: 300px;
 }
 .feature-items h3{
     font-size: 30px;
     line-height: 42px;
 }
 .index-columns{
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 35px;
+    padding: 50px 80px;
+
     color: #000000;
 
     background-color: #f8f5f2;
     background-image: url("../img/Layer_10_copy.png");
     background-position: 0 0;
     background-repeat: repeat;
+}
+.news{
+    width: 380px;
+}
+.gallery{
+    width: 300px;
 }
 .index-columns h2{
     font-size: 30px;
@@ -90,7 +135,7 @@ a{
 .news-list time{
     text-transform: none;
 }
-.gallery-content img{
+.gallery-content{
     background-color: #cccccc;
     border: 7px solid #ffffff;
 }
@@ -99,6 +144,12 @@ a{
 
     background-color: transparent;
     border: 2px solid #000000;
+}
+.contacts{
+    width: 380px;
+}
+.appointment{
+    width: 300px;
 }
 .appointment-item input:focus{
     border-color: #663d15;
@@ -110,7 +161,20 @@ a{
     background-image: url("../img/Layer_23.png");
     background-position: 0 0;
     background-repeat: repeat;
+
+    margin-top: 65px;
+    padding: 60px 0;
 }
+.main-footer .container{
+    display: flex;
+}
+.footer-contacts{
+    width: 320px;
+
+    margin: 0;
+    margin-right: 80px;
+}
+
 .footer-contacts a{
     color: #ffffff;
     text-decoration: underline;
@@ -120,6 +184,8 @@ a{
     text-decoration: none;
 }
 .footer-social{
+    width: 145px;
+
     text-align: center;
 }
 .footer-social ul{
@@ -129,7 +195,12 @@ a{
     color: #ffffff;
 }
 .footer-copyright{
+    width: 150px;
+
     text-align: center;
+
+    margin: 0;
+    margin-left: auto;
 }
 .footer-copyright a:hover,
 .footer-copyright a:focus{
