--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,44 @@ a{
 .site-nav,
 .user-nav{
     list-style: none;
+    margin: 0;
+}
+.site-nav{
+    display: flex;
+    flex-wrap: wrap;
+}
+.user-nav{
+    max-width: 140px;
+}
+.user-nav .login-link{
+    position: relative;
+    padding-left: 50px;
+}
+.login-link::before{
+    content: "";
+    width: 14px;
+    height: 14px;
+    display: block;
+    position: absolute;
+    top: 28px;
+    left: 25px;
+
+    background-image: url('../img/login.png');
+    background-position: 0 0;
+    background-repeat: no-repeat;
+
+    opacity: 0.3;
+}
+.login-link:hover::before,
+.login-link:focus::before{
+    opacity: 1;
 }
 .site-nav a,
 .user-nav a{
     color: #ffffff;
+
+    display: block;
+    padding: 25px 20px;
 }
 .site-nav a:hover,
 .site-nav a:focus,
