--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a{
 .button{
     display: inline-block;
     padding: 10px 30px;
+    margin-right: 16px;
 
     cursor: pointer;
     font: inherit;
@@ -50,6 +51,23 @@ a{
     cursor: default;
     background-color: #000000;
     opacity: 0.5;
+}
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden{
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .main-header{
     margin-bottom:75px;
@@ -238,7 +256,18 @@ a{
 .gallery-button-next{
     right: 0;
 }
+.contacts{
+    width: 380px;
+}
+.contacts p{
+    margin: 0;
+    margin-bottom: 25px;
+}
 .appointment-item input{
+    box-sizing: border-box;
+    width: 140px;
+    padding: 8px 15px 7px 15px;
+
     font: inherit;
 
     background-color: transparent;
@@ -246,14 +275,38 @@ a{
 
     outline: none;
 }
-.contacts{
-    width: 380px;
-}
 .appointment{
     width: 300px;
 }
+.appointment-info{
+    margin: 0;
+    margin-bottom: 15px;
+}
+.appointment-form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.appointment-item{
+    margin: 0;
+    margin-bottom: 10px;
+}
+.appointment-item label{
+    display: block;
+    margin-left: 15px;
+    margin-bottom: 9px;
+}
+.appointment-item{
+    width: 140px;
+}
 .appointment-item input:focus{
     border-color: #663d15;
+}
+.appointment .button{
+    width: 100%;
+    margin-right: 0;
+    margin-top: 10px;
 }
 .main-footer{
     color: #ffffff;
@@ -297,6 +350,67 @@ a{
 .social-button{
     color: #ffffff;
 }
+.social-link{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 145px;
+    margin: 0;
+    margin-top: 15px;
+    padding: 0;
+}
+.social-button-vk{
+    display: inline-block;
+    width: 43px;
+    height: 43px;
+
+    background-color: #000000;
+    background-image: url("../img/vk-white.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.social-button-fb{
+    display: inline-block;
+    width: 43px;
+    height: 43px;
+    
+    background-color: #000000;
+    background-image: url("../img/facebook-white.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.social-button-inst{
+    display: inline-block;
+    width: 43px;
+    height: 43px;
+    
+    background-color: #000000;
+    background-image: url("../img/instagram-white.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.social-button-vk:hover,
+.social-button-vk:focus{
+    background-color: #ffffff;
+    background-image: url("../img/vk-black.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.social-button-fb:hover,
+.social-button-fb:focus{
+    background-color: #ffffff;
+    background-image: url("../img/facebook-black.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.social-button-inst:hover,
+.social-button-inst:focus{
+    background-color: #ffffff;
+    background-image: url("../img/instagram-black.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
 .footer-copyright{
     width: 150px;
 
@@ -304,6 +418,14 @@ a{
 
     margin: 0;
     margin-left: auto;
+}
+.footer-copyright b{
+    display: block;
+
+    margin-bottom: 15px;
+}
+.footer-copyright .button{
+    margin-right: 0;
 }
 .footer-copyright a:hover,
 .footer-copyright a:focus{
