--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,8 @@ input[type="radio"].visually-hidden{
     background-color: #ffffff;
 }
 .modal{
+    display: none;
+
     position: fixed;
 
     color: #000000;
@@ -444,7 +446,7 @@ input[type="radio"].visually-hidden{
     background-image: url("../img/Layer_10_copy.png");
     background-position: 0 0;
     background-repeat: repeat;
-    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7)
+    box-shadow: 0 0px 50px rgba(0, 0, 0, 0.7)
 }
 .modal-login h2{
     font-size: 30px;
@@ -599,6 +601,26 @@ input[type="radio"].visually-hidden{
 .modal-login .button{
     width: 100%;
     margin-right: 0;
+}
+.modal-map{
+    display: none;
+
+    width: 780px;
+    height: 574px;
+    box-sizing: border-box;
+    background-color: #aba9a7;
+
+    border: 7px solid #ffffff;
+
+    position: fixed;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -280px;
+    margin-left: -383px;
+}
+.modal-map p{
+    margin: 0;
 }
 /* стили для catalog.html <---------------------------------------*/
 .inner-page .main-nav{
