--- a/css/style.css
+++ b/css/style.css
@@ -807,7 +807,8 @@ fieldset ul{
 }
 .catalog-item{
     background-color: #ffffff;
-
+    box-shadow: 0 0 15px 0 rgba(0, 1, 1, 0.2);
+    
     width: 220px;
     margin-bottom: 20px;
     margin-right: 20px;
