--- a/css/style.css
+++ b/css/style.css
@@ -991,3 +991,109 @@ fieldset ul{
 
     transform: rotate(45deg);
 }
+/*Стили для Price <--------------------------------------- */
+
+.price-logo{
+    font-size: 48px;
+    line-height: 48px;
+
+    display: block;
+    margin: 0;
+    margin-bottom: 65px;
+    padding-left: 185px;
+
+    background-image:
+    url('../img/Без_имени.png'),
+    url('../img/Без_имени.png');
+    background-position: left center, right center;
+    background-repeat: no-repeat;
+}
+.price-wrap{
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 60px;
+}
+.price-advantage{
+    width: 240px;
+}
+.advantage-logo{
+    margin: 0;
+    margin-bottom: 30px;
+}
+.advantage-list{
+    list-style: none;
+
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+    
+    position: relative;
+}
+.advantage-item{
+    margin-bottom: 15px;
+}
+.advantage-item a{
+    color: #000000;
+}
+.advantage-item a:hover{
+    text-decoration: underline;
+}
+.advantage-item::before{
+    content: "";
+
+    width: 8px;
+    height: 8px;
+    background-color: #000000;
+
+    position: absolute;
+    left: 0;
+    margin-top: 4px;
+
+    transform: rotate(45deg);
+}
+.price{
+    width: 460px;
+}
+.table-logo{
+    margin: 0;
+    margin-bottom: 35px;
+
+    width: 175px;
+}
+.price-table{
+    border-collapse: collapse;
+
+    width: 100%;
+}
+.price-column{
+    border: 2px solid #000000;
+    width: 50%;
+
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 17px;
+}
+.price-item{
+    padding-left: 98px;
+}
+.description-shop{
+    display: flex;
+    flex-wrap: wrap;
+
+    margin-bottom: 75px;
+}
+.description-shop p{
+    width: 380px;
+}
+.description-shop-logo{
+    display: block;
+    font-size: 24px;
+
+    margin-bottom: 35px;
+}
+.second-paragraph{
+    margin:0;
+    margin-left: 100px;
+    margin-top: 60px;
+}
